--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  url_launcher:
 
 
   # The following adds the Cupertino Icons font to your application.
