--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   location: ^4.4.0
   file_picker: ^5.2.2
   emoji_picker_flutter: ^1.5.0
-  
+  images_picker: ^1.2.11
 
 
  
@@ -83,7 +83,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/icons/    
+    - assets/icons/
+    
+     
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
