--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   file_picker: ^5.2.2
   emoji_picker_flutter: ^1.5.0
   images_picker: ^1.2.11
+  google_maps_flutter: ^2.1.8
+  geolocator: ^9.0.2
+  
 
 
  
