--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,10 @@ dependencies:
   images_picker: ^1.2.11
   google_maps_flutter: ^2.1.8
   geolocator: ^9.0.2
-  playify: ^2.2.0
+  audioplayers: ^1.1.1
+  assets_audio_player: ^3.0.5
+  
+ 
   
 
 
@@ -88,6 +91,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/sound/
     
      
 
