--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   geolocator: ^9.0.2
   audioplayers: ^1.1.1
   assets_audio_player: ^3.0.5
+  permission_handler: ^10.2.0
+  
   
  
   
